kube/gradio/gradio-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dv-prod
  name: gradio-service
spec:
  selector:
    app: gradio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
